# PyOnset

./: .gitignore  LICENSE.rst  MANIFEST.in  README.md  README.rst  custom_data_minimal_working_example.ipynb  custom_data_testing.ipynb  hybrid_cusum.py  pyproject.toml  setup.cfg  setup.py  tox.ini
data/l2/epd/het/: solo_L2_epd-het-asun-rates_20211027_V01.cdf  solo_L2_epd-het-asun-rates_20211028_V01.cdf  solo_L2_epd-het-asun-rates_20211029_V01.cdf  solo_L2_epd-het-north-rates_20211027_V01.cdf  solo_L2_epd-het-north-rates_20211028_V01.cdf  solo_L2_epd-het-north-rates_20211029_V01.cdf  solo_L2_epd-het-south-rates_20211027_V01.cdf  solo_L2_epd-het-south-rates_20211028_V01.cdf  solo_L2_epd-het-south-rates_20211029_V01.cdf  solo_L2_epd-het-sun-rates_20211027_V01.cdf  solo_L2_epd-het-sun-rates_20211028_V01.cdf  solo_L2_epd-het-sun-rates_20211029_V01.cdf
docs/: conf.py  index.rst
examples/: Minimal_working_demo_updated.ipynb  custom_data_minimal_working_example.ipynb  custom_data_testing.ipynb  pyonset_minimal_demo.ipynb  soho_erne_p_4_20220328peak.csv
licenses/: LICENSE.rst
pyonset/: __init__.py  bootstrapwindow.py  calc_utilities.py  datetime_utilities.py  onsetstatsarray.py  plot_utilities.py  requirements.txt  version.py
